--- a/StoryFort.Tests.E2E/StoryFort.Tests.E2E.csproj
+++ b/StoryFort.Tests.E2E/StoryFort.Tests.E2E.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+    <PackageReference Include="PuppeteerSharp" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.36.0" />
   </ItemGroup>
 
   <ItemGroup>
