--- a/StoryFort/StoryFort.csproj
+++ b/StoryFort/StoryFort.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.TextEditor" Version="1.1.3" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="10.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="10.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
